[metadata]
name = gremlite
version = attr: gremlite.__version__
license = Apache 2.0
license_files = LICENSE.txt, NOTICE.txt
url = https://github.com/skieffer/gremlite
description = Serverless graph database using Gremlin with SQLite
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires =
    gremlinpython>=3.7.0,<3.8.0

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    pytest
    pytest-cov
    build
    twine
    invoke
